--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^7.4.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-router": "^2.8.1",
     "redux": "^3.6.0",
+    "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0"
   }
 }
